Mutant RMSD calculator troubleshooting, biopython method works but pyRMSD gives HUGE errors

--- a/DDG_Code.ipynb
+++ b/DDG_Code.ipynb
@@ -889,6 +889,44 @@
     "chaintomove, pdb_file = json_parser()\n",
     "bash(chaintomove, pdb_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    ref_sorted = []\n",
+    "    alt_sorted = []\n",
+    "    \n",
+    "    for i in ref_atoms:\n",
+    "        for j in alt_atoms:\n",
+    "            if i.get_full_id()[2] == j.get_full_id()[2]:\n",
+    "                if i.get_full_id()[3] == j.get_full_id()[3]:\n",
+    "                    if i.get_full_id()[4] == j.get_full_id()[4]:\n",
+    "                        ref_sorted.append(i.get_coord())\n",
+    "                        alt_sorted.append(j.get_coord())\n",
+    "   \n",
+    "    ref_atoms_array = np.asarray(ref_sorted)\n",
+    "    alt_atoms_array = np.asarray(alt_sorted)\n",
+    "    \n",
+    "    print ref_atoms_array\n",
+    "    print alt_atoms_array\n",
+    "    \n",
+    "    assert( len(ref_atoms) == len(alt_atoms) )\n",
+    "    if 'QCP_CUDA_MEM_CALCULATOR' in availableCalculators():\n",
+    "        pyrmsd_calc = 'QCP_CUDA_MEM_CALCULATOR'\n",
+    "    else:\n",
+    "        pyrmsd_calc = 'QCP_SERIAL_CALCULATOR'\n",
+    "    calculator = pyRMSD.RMSDCalculator.RMSDCalculator(pyrmsd_calc, np.array([ref_atoms_array, alt_atoms_array]))\n",
+    "    \n",
+    "    print ref_atoms_array\n",
+    "    print alt_atoms_array\n",
+    "    \n",
+    "    return calculator.pairwiseRMSDMatrix()[0]"
+   ]
   }
  ],
  "metadata": {
@@ -907,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
