--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -16,26 +16,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.069859570309335581"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['61', 'I', 'PIKAA', 'A']]\n",
+      "[ 45.34700012  37.98400116  11.57699966]\n",
+      "[ 46.34199905  38.56499863  10.58199978]\n",
+      "[ 47.68299866  37.85200119  10.67599964]\n",
+      "[ 47.54700089  36.15599823   8.81999969]\n",
+      "[ 47.67399979  35.34199905  11.06799984]\n",
+      "[ 47.51200104  34.84899902   8.31700039]\n",
+      "[ 47.61500168  33.98300171  10.55900002]\n",
+      "[ 47.63499832  36.40599823  10.18299961]\n",
+      "[ 47.5340004   33.78499985   9.19099998]\n",
+      "[ 46.53499985  39.99100113  10.89099979]\n",
+      "[ 45.58499908  37.99700165  12.80500031]\n",
+      "[ 47.48099899  32.51300049   8.63000011]\n",
+      "0.107679458755\n"
+     ]
     }
    ],
    "source": [
     "import Bio.PDB\n",
     "import os\n",
+    "\n",
+    "import pyRMSD\n",
+    "from pyRMSD.matrixHandler import MatrixHandler\n",
+    "import pyRMSD.RMSDCalculator\n",
+    "from pyRMSD.availableCalculators import availableCalculators\n",
     "\n",
     "#From Kyle's Finalize.py\n",
     "def read_mutations_resfile(filenum_dir):\n",
@@ -137,13 +151,27 @@
     "    alt_atoms = []\n",
     "\n",
     "    for res in neighbors:\n",
-    "        for (ref_atom, alt_atom) in zip(ref_struc.get_atoms(), alt_struc.get_atoms()):\n",
+    "        for ref_atom in ref_struc.get_atoms():\n",
     "            if ref_atom.get_parent().get_full_id()[2] == res[1]:\n",
     "                if ref_atom.get_parent().get_full_id()[3][1] == res[0][1]:\n",
-    "                    ref_atoms.append(ref_atom)                \n",
+    "                    if 'H' in ref_atom.get_id():\n",
+    "                        if 'O' in ref_atom.get_id() or 'N' in ref_atom.get_id():\n",
+    "                            ref_atoms.append(ref_atom)\n",
+    "                        else:\n",
+    "                            continue\n",
+    "                    else:\n",
+    "                        ref_atoms.append(ref_atom)\n",
+    "        \n",
+    "        for alt_atom in alt_struc.get_atoms():    \n",
     "            if alt_atom.get_parent().get_full_id()[2] == res[1]:\n",
     "                if alt_atom.get_parent().get_full_id()[3][1] == res[0][1]:     \n",
-    "                    alt_atoms.append(alt_atom)\n",
+    "                    if 'H' in alt_atom.get_id():\n",
+    "                        if 'O' in alt_atom.get_id() or 'N' in alt_atom.get_id():\n",
+    "                            alt_atoms.append(alt_atom)\n",
+    "                        else:\n",
+    "                            continue\n",
+    "                    else:\n",
+    "                        alt_atoms.append(alt_atom)\n",
     "    \n",
     "    def getKey(item):\n",
     "        return item.get_full_id()[4][0]\n",
@@ -157,22 +185,61 @@
     "    return super_imposer.rms\n",
     "\n",
     "#Calculates sidechain rmsd        \n",
-    "def rms_mutation(mutations, sidechain_ref, sidechain_target):\n",
+    "def rms_mutation(filenum_dir, ref_struc, alt_struc):\n",
+    "    mutations = read_mutations_resfile(filenum_dir)\n",
     "    \n",
-    "    #Superimpose\n",
+    "    ref_atoms = []\n",
+    "    alt_atoms = []   \n",
+    "    \n",
+    "    print mutations\n",
+    "    \n",
+    "    for i in mutations:\n",
+    "        for ref_atom in ref_struc.get_atoms():\n",
+    "            if ref_atom.get_parent().get_full_id()[2] == i[1]:\n",
+    "                if str(ref_atom.get_parent().get_full_id()[3][1]) == i[0]:\n",
+    "                    if 'H' in ref_atom.get_id():\n",
+    "                        if 'O' in ref_atom.get_id() or 'N' in ref_atom.get_id():\n",
+    "                            ref_atoms.append(ref_atom)\n",
+    "                        else:\n",
+    "                            continue\n",
+    "                    else:\n",
+    "                        ref_atoms.append(ref_atom)\n",
+    "        \n",
+    "        for alt_atom in alt_struc.get_atoms():    \n",
+    "            if alt_atom.get_parent().get_full_id()[2] == i[1]:\n",
+    "                if str(alt_atom.get_parent().get_full_id()[3][1]) == i[0]:     \n",
+    "                    if 'H' in alt_atom.get_id():\n",
+    "                        if 'O' in alt_atom.get_id() or 'N' in alt_atom.get_id():\n",
+    "                            alt_atoms.append(alt_atom)\n",
+    "                        else:\n",
+    "                            continue\n",
+    "                    else:\n",
+    "                        alt_atoms.append(alt_atom) \n",
+    "    \n",
+    "    def getKey(item):\n",
+    "        return item.get_full_id()[4][0]\n",
+    "    \n",
+    "    ref_atoms = sorted(ref_atoms, key=getKey)\n",
+    "    alt_atoms = sorted(alt_atoms, key=getKey)\n",
+    "\n",
+    "    ref_atoms_coord = []\n",
+    "    alt_atoms_coord = []\n",
+    "    \n",
+    "    for i in ref_atoms:\n",
+    "        ref_atoms_coord.append(i.get_coord())\n",
+    "    for i in alt_atoms:\n",
+    "        alt_atoms_coord.append(i.get_coord())\n",
+    "    \n",
     "    super_imposer = Bio.PDB.Superimposer()\n",
-    "    \n",
-    "    ref_atoms = sidechain_ref.get_unpacked_list()\n",
-    "    target_atoms = sidechain_target.get_unpacked_list()\n",
-    "    \n",
-    "    super_imposer.set_atoms(ref_atoms, target_atoms)\n",
+    "    super_imposer.set_atoms(ref_atoms, alt_atoms)\n",
+    "        \n",
     "    return super_imposer.rms\n",
     "\n",
     "#Input structure (for now, should transfer to a different function later)\n",
     "def simple_input():\n",
     "    parser = PDBParser()\n",
     "    structure_ref = parser.get_structure('Ref', 'TestJobs/data/59648/1TM1_EI.pdb')\n",
-    "    structure_target = parser.get_structure('Target', 'TestJobs/output/59648/1TM1_EI_0001.pdb')\n",
+    "    structure_target = parser.get_structure('Target', 'TestJobs/output/59648/1TM1_EI_0003.pdb')\n",
     "    return structure_ref, structure_target\n",
     "\n",
     "#Define things\n",
@@ -181,14 +248,15 @@
     "pdb_path = 'TestJobs/data/59648/1TM1_EI.pdb'\n",
     "neighbors = find_neighbors(filenum_dir, pdb_path, 8)\n",
     "\n",
+    "#Action!!!\n",
+    "def main():\n",
+    "    #all_by_all(datadir)\n",
+    "    structure_ref, structure_target = simple_input()\n",
+    "    #rms_global(structure_ref, structure_target)\n",
+    "    #rms_neighborhood(neighbors, structure_ref, structure_target)\n",
+    "    print rms_mutation(filenum_dir, structure_ref, structure_target)\n",
     "\n",
-    "#Action!\n",
-    "simple_input()\n",
-    "#all_by_all(datadir)\n",
-    "#mutations = read_mutations_resfile('TestJobs/data/59648/')\n",
-    "#structure_ref, structure_target = simple_input()\n",
-    "#rms_global(structure_ref, structure_target)\n",
-    "rms_neighborhood(neighbors, structure_ref, structure_target)"
+    "main()"
    ]
   },
   {
@@ -319,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
