preparing for DDG_Protocol_v1 Rscript run

--- a/DDG_Code.ipynb
+++ b/DDG_Code.ipynb
@@ -30,12 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "187E,186E,219E,218E,217E,64I,189E,188E,190E,156E,154E,155E,220E,221E,59I,63I,62I,222E,60I,61I,58I\n",
+      "/Users/jameslucas/Kortemme_Rotation/TestJobs\n",
+      "/Users/jameslucas/Rosetta/main/source/bin/rosetta_scripts.macosclangrelease -s ../../data/59648/1TM1_EI.pdb -parser:protocol ../../../RosettaScripts/DDG_Protocol_v1.xml -ignore_unrecognized_res -parser:script_vars resfile_relpath=../../data/59648 pivot_residues=187E,186E,219E,218E,217E,64I,189E,188E,190E,156E,154E,155E,220E,221E,59I,63I,62I,222E,60I,61I,58I chain=I -nstruct 5 \n"
+     ]
+    }
+   ],
    "source": [
     "#Modified SubmitRun_DDG_Zemu_General.py for local troubleshooting of DDG_Test.xml\n",
     "#3/26/16\n",
@@ -53,8 +63,8 @@
     "from Bio.PDB import *\n",
     "from datetime import *\n",
     "\n",
-    "#os.chdir('/Users/jameslucas/Kortemme_Rotation/')\n",
-    "os.chdir('/home/james.lucas/Rotation/DDGBenchmarks_Test')\n",
+    "os.chdir('/Users/jameslucas/Kortemme_Rotation/TestJobs')\n",
+    "#os.chdir('/home/james.lucas/Rotation/DDGBenchmarks_Test')\n",
     "\n",
     "#From Kyle's Finalize.py\n",
     "def read_mutations_resfile(filenum_dir):\n",
@@ -195,7 +205,7 @@
     "           '-s',\n",
     "           pdb_relpath,\n",
     "           '-parser:protocol',\n",
-    "           '../../RosettaScripts/DDG_Test.xml',\n",
+    "           '../../../RosettaScripts/DDG_Protocol_v1.xml',\n",
     "           '-ignore_unrecognized_res',\n",
     "           '-parser:script_vars',\n",
     "           'resfile_relpath=%s' %(resfile_relpath),\n",
@@ -204,6 +214,10 @@
     "           '-nstruct 5'\n",
     "          ]\n",
     "    \n",
+    "    submit = ''\n",
+    "    for i in arg:\n",
+    "        submit = submit + '%s ' % i\n",
+    "    print submit\n",
     "#    print 'Working on: %s %s' %(filenum, PDBID)\n",
     "    \n",
     "#    outfile_path = os.path.join(predIDoutdir, 'rosetta.out')\n",
@@ -898,6 +912,7 @@
    },
    "outputs": [],
    "source": [
+    "##pyRMSD method for mutation_rmsd() in StructuralAnalysisMethods\n",
     "    ref_sorted = []\n",
     "    alt_sorted = []\n",
     "    \n",
@@ -945,7 +960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
