--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -25,31 +25,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['61', 'I', 'PIKAA', 'A']]\n",
-      "[ 45.34700012  37.98400116  11.57699966]\n",
-      "[ 46.34199905  38.56499863  10.58199978]\n",
-      "[ 47.68299866  37.85200119  10.67599964]\n",
-      "[ 47.54700089  36.15599823   8.81999969]\n",
-      "[ 47.67399979  35.34199905  11.06799984]\n",
-      "[ 47.51200104  34.84899902   8.31700039]\n",
-      "[ 47.61500168  33.98300171  10.55900002]\n",
-      "[ 47.63499832  36.40599823  10.18299961]\n",
-      "[ 47.5340004   33.78499985   9.19099998]\n",
-      "[ 46.53499985  39.99100113  10.89099979]\n",
-      "[ 45.58499908  37.99700165  12.80500031]\n",
-      "[ 47.48099899  32.51300049   8.63000011]\n",
+      "[<Atom N>, <Atom CA>, <Atom C>, <Atom O>, <Atom CB>, <Atom CG>, <Atom CD1>, <Atom CD2>, <Atom CE1>, <Atom CE2>, <Atom CZ>, <Atom OH>]\n",
+      "[<Atom N>, <Atom CA>, <Atom C>, <Atom O>, <Atom CB>, <Atom CG>, <Atom CD1>, <Atom CD2>, <Atom CE1>, <Atom CE2>, <Atom CZ>, <Atom OH>]\n",
       "0.107679458755\n"
      ]
     }
    ],
    "source": [
-    "import Bio.PDB\n",
+    "from Bio.PDB import *\n",
     "import os\n",
     "\n",
-    "import pyRMSD\n",
-    "from pyRMSD.matrixHandler import MatrixHandler\n",
-    "import pyRMSD.RMSDCalculator\n",
-    "from pyRMSD.availableCalculators import availableCalculators\n",
+    "#import pyRMSD\n",
+    "#from pyRMSD.matrixHandler import MatrixHandler\n",
+    "#import pyRMSD.RMSDCalculator\n",
+    "#from pyRMSD.availableCalculators import availableCalculators\n",
     "\n",
     "#From Kyle's Finalize.py\n",
     "def read_mutations_resfile(filenum_dir):\n",
@@ -104,6 +93,36 @@
     "\n",
     "    return neighbors\n",
     "\n",
+    "#Residue list generator\n",
+    "def generate_lists(reslist, ref_struc, alt_struc):\n",
+    "    ref_atoms = []\n",
+    "    alt_atoms = []\n",
+    "\n",
+    "    for res in reslist:\n",
+    "        for ref_atom in ref_struc.get_atoms():\n",
+    "            if ref_atom.get_parent().get_full_id()[2] == res[1]:\n",
+    "                if str(ref_atom.get_parent().get_full_id()[3][1]) == str(res[0]):\n",
+    "                    if 'H' in ref_atom.get_id():\n",
+    "                        if 'O' in ref_atom.get_id() or 'N' in ref_atom.get_id():\n",
+    "                            ref_atoms.append(ref_atom)\n",
+    "                        else:\n",
+    "                            continue\n",
+    "                    else:\n",
+    "                        ref_atoms.append(ref_atom)\n",
+    "        \n",
+    "        for alt_atom in alt_struc.get_atoms():    \n",
+    "            if alt_atom.get_parent().get_full_id()[2] == res[1]:\n",
+    "                if str(alt_atom.get_parent().get_full_id()[3][1]) == str(res[0]):     \n",
+    "                    if 'H' in alt_atom.get_id():\n",
+    "                        if 'O' in alt_atom.get_id() or 'N' in alt_atom.get_id():\n",
+    "                            alt_atoms.append(alt_atom)\n",
+    "                        else:\n",
+    "                            continue\n",
+    "                    else:\n",
+    "                        alt_atoms.append(alt_atom)\n",
+    "    \n",
+    "    return ref_atoms, alt_atoms\n",
+    "\n",
     "#Calculates global CA rmsd (Only guarenteed to work on identical structures!!!!)\n",
     "#By identical I mean the same starting PDBs but one had some movers applied to it\n",
     "def rms_global(ref_struc, alt_struc):\n",
@@ -147,31 +166,7 @@
     "\n",
     "#Neighborhood RMSD\n",
     "def rms_neighborhood(neighbors, ref_struc, alt_struc):\n",
-    "    ref_atoms = []\n",
-    "    alt_atoms = []\n",
-    "\n",
-    "    for res in neighbors:\n",
-    "        for ref_atom in ref_struc.get_atoms():\n",
-    "            if ref_atom.get_parent().get_full_id()[2] == res[1]:\n",
-    "                if ref_atom.get_parent().get_full_id()[3][1] == res[0][1]:\n",
-    "                    if 'H' in ref_atom.get_id():\n",
-    "                        if 'O' in ref_atom.get_id() or 'N' in ref_atom.get_id():\n",
-    "                            ref_atoms.append(ref_atom)\n",
-    "                        else:\n",
-    "                            continue\n",
-    "                    else:\n",
-    "                        ref_atoms.append(ref_atom)\n",
-    "        \n",
-    "        for alt_atom in alt_struc.get_atoms():    \n",
-    "            if alt_atom.get_parent().get_full_id()[2] == res[1]:\n",
-    "                if alt_atom.get_parent().get_full_id()[3][1] == res[0][1]:     \n",
-    "                    if 'H' in alt_atom.get_id():\n",
-    "                        if 'O' in alt_atom.get_id() or 'N' in alt_atom.get_id():\n",
-    "                            alt_atoms.append(alt_atom)\n",
-    "                        else:\n",
-    "                            continue\n",
-    "                    else:\n",
-    "                        alt_atoms.append(alt_atom)\n",
+    "    ref_atoms, alt_atoms = generate_lists(neighbors, ref_struc, alt_struc)\n",
     "    \n",
     "    def getKey(item):\n",
     "        return item.get_full_id()[4][0]\n",
@@ -187,34 +182,7 @@
     "#Calculates sidechain rmsd        \n",
     "def rms_mutation(filenum_dir, ref_struc, alt_struc):\n",
     "    mutations = read_mutations_resfile(filenum_dir)\n",
-    "    \n",
-    "    ref_atoms = []\n",
-    "    alt_atoms = []   \n",
-    "    \n",
-    "    print mutations\n",
-    "    \n",
-    "    for i in mutations:\n",
-    "        for ref_atom in ref_struc.get_atoms():\n",
-    "            if ref_atom.get_parent().get_full_id()[2] == i[1]:\n",
-    "                if str(ref_atom.get_parent().get_full_id()[3][1]) == i[0]:\n",
-    "                    if 'H' in ref_atom.get_id():\n",
-    "                        if 'O' in ref_atom.get_id() or 'N' in ref_atom.get_id():\n",
-    "                            ref_atoms.append(ref_atom)\n",
-    "                        else:\n",
-    "                            continue\n",
-    "                    else:\n",
-    "                        ref_atoms.append(ref_atom)\n",
-    "        \n",
-    "        for alt_atom in alt_struc.get_atoms():    \n",
-    "            if alt_atom.get_parent().get_full_id()[2] == i[1]:\n",
-    "                if str(alt_atom.get_parent().get_full_id()[3][1]) == i[0]:     \n",
-    "                    if 'H' in alt_atom.get_id():\n",
-    "                        if 'O' in alt_atom.get_id() or 'N' in alt_atom.get_id():\n",
-    "                            alt_atoms.append(alt_atom)\n",
-    "                        else:\n",
-    "                            continue\n",
-    "                    else:\n",
-    "                        alt_atoms.append(alt_atom) \n",
+    "    ref_atoms, alt_atoms = generate_lists(mutations, ref_struc, alt_struc)\n",
     "    \n",
     "    def getKey(item):\n",
     "        return item.get_full_id()[4][0]\n",
@@ -387,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
