prep for DDG Rscript protocol v2 with hard repack

--- a/RotationNotebook.v1.ipynb
+++ b/RotationNotebook.v1.ipynb
@@ -8,7 +8,8 @@
     "## Contents:\n",
     "* [April 4, 2016](#April-4,-2016) - Met with Tanja, suggestions on improvements and things to try with DDG RosettaScript Protocol<br>\n",
     "* [April 7, 2016](#April-7,-2016) - New directions while we are waiting for a repsonse from Colin\n",
-    "* [April 10, 2016](#April-10,-2016) - Updates to DDG Backrub RosettaScript"
+    "* [April 10, 2016](#April-10,-2016) - Updates to DDG Backrub RosettaScript\n",
+    "* [April 18, 2016](#April-18,-2016) - Suggestions for fixing RosettaScript Repack problem"
    ]
   },
   {
@@ -119,6 +120,18 @@
     "* Using AddConstraintsToCurrentConformationMover with MinMover to simulate Minimize_with_cst app\n",
     "<br><br>\n",
     "* Unlike the BackrubProtocol, where P.rotamer = 0.25 and P.backbone = 0.75, the Rosettascript will always apply backrub and sidechain moves."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## April 18, 2016\n",
+    "\n",
+    "Add sidechain rmsd observer thing<br>\n",
+    "Noah's methods in enzymology paper for backrub minization asdf<br>"
    ]
   },
   {
