worked on PDB scraper

--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -11,7 +11,21 @@
     "* How much backbone variation is required/useful?\n",
     "* Input starting PDB, WT output PDBs, and mutant output PDBs\n",
     "* All-vs-all RMSDs for any outputs (DDG WT, DDG mutants, minimization comparison structures)\n",
-    "* RMSD for 8A repack sphere (repacking) and overall structure"
+    "* RMSD for 8A repack sphere (repacking) and overall structure\n",
+    "\n",
+    "<b>Table of Contents:</b>\n",
+    "* [RMSD-Calculator + X angles](#RMSD-Calculator-+-X-angles)<br>\n",
+    "* [X Angle Parser](#X-Angle-Parser)<br>\n",
+    "* [Mutant PBD Scraper](#Mutant-PBD-Scraper)<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RMSD Calculator + X angles\n",
+    "\n",
+    "This script uses pyRMSD to perform pairwaise RMSD calculations 1) globally, 2) within a shell defined by the find_neighbors function, and 3) for individual point mutations as defined by the read_mutations_resfile function."
    ]
   },
   {
@@ -153,6 +167,84 @@
     "    print mutation_dict.keys()\n",
     "    return mutation_dict\n",
     "\n",
+    "def chi_angles(datadir, input_pdbs):\n",
+    "    mutations = read_mutations_resfile(datadir)\n",
+    "    \n",
+    "    #http://www.ccp14.ac.uk/ccp/web-mirrors/garlic/garlic/commands/dihedrals.html\n",
+    "    chi1_dict = {'ARG':['N','CA','CB','CG'],\n",
+    "                 'ASN':['N','CA','CB','CG'],\n",
+    "                 'ASP':['N','CA','CB','CG'],\n",
+    "                 'CYS':['N','CA','CB','SG'],\n",
+    "                 'GLN':['N','CA','CB','CG'],\n",
+    "                 'GLU':['N','CA','CB','CG'],\n",
+    "                 'HIS':['N','CA','CB','CG'],\n",
+    "                 'ILE':['N','CA','CB','CG1'],\n",
+    "                 'LEU':['N','CA','CB','CG'],\n",
+    "                 'LYS':['N','CA','CB','CG'],\n",
+    "                 'MET':['N','CA','CB','CG'],\n",
+    "                 'PHE':['N','CA','CB','CG'],\n",
+    "                 'PRO':['N','CA','CB','CG'],\n",
+    "                 'SER':['N','CA','CB','OG'],\n",
+    "                 'THR':['N','CA','CB','OG1'],\n",
+    "                 'TRP':['N','CA','CB','CG'],\n",
+    "                 'TYR':['N','CA','CB','CG'],\n",
+    "                 'VAL':['N','CA','CB','CG1']}\n",
+    "    chi2_dict = {'ARG':['CA','CB','CG','CD'],\n",
+    "                 'ASN':['CA','CB','CG','OD1'],\n",
+    "                 'ASP':['CA','CB','CG','OD1'],\n",
+    "                 'GLN':['CA','CB','CG','CD'],\n",
+    "                 'GLU':['CA','CB','CG','CD'],\n",
+    "                 'HIS':['CA','CB','CG','ND1'],\n",
+    "                 'ILE':['CA','CB','CG1','CD'],\n",
+    "                 'LEU':['CA','CB','CG','CD1'],\n",
+    "                 'LYS':['CA','CB','CG','CD'],\n",
+    "                 'MET':['CA','CB','CG','SD'],\n",
+    "                 'PHE':['CA','CB','CG','CD1'],\n",
+    "                 'PRO':['CA','CB','CG','CD'],\n",
+    "                 'TRP':['CA','CB','CG','CD1'],\n",
+    "                 'TYR':['CA','CB','CG','CD1']}\n",
+    "    \n",
+    "    xangles_dict = {}\n",
+    "    \n",
+    "    for mutation in mutations:\n",
+    "        if mutation[3] == 'A' or 'G':\n",
+    "            continue\n",
+    "        else:\n",
+    "            xangles_dict['%s%s' %(mutation[0], mutation[1])] = {}\n",
+    "            counter = 1\n",
+    "            for input_pdb in input_pdbs:\n",
+    "                p = prody.parsePDB(input_pdb)\n",
+    "                hv = p.getHierView()\n",
+    "\n",
+    "                current_res = hv[mutation[1], int(mutation[0])]\n",
+    "                templist = []\n",
+    "\n",
+    "                if current_res.getResname() == 'ALA' or 'GLY':\n",
+    "                    continue\n",
+    "\n",
+    "                else:\n",
+    "                    if current_res.getResname() in chi1_dict.keys():\n",
+    "                        current_res.select('name %s' %chi1_dict[current_res.getResname()])\n",
+    "                        chi1 = calcDihedral(current_res.select('name %s' %chi1_dict[current_res.getResname()][0]),\n",
+    "                                            current_res.select('name %s' %chi1_dict[current_res.getResname()][1]),\n",
+    "                                            current_res.select('name %s' %chi1_dict[current_res.getResname()][2]),\n",
+    "                                            current_res.select('name %s' %chi1_dict[current_res.getResname()][3]))\n",
+    "                        templist.append(chi1[0])\n",
+    "\n",
+    "                    if current_res.getResname() in chi2_dict.keys():\n",
+    "                        chi2 = calcDihedral(current_res.select('name %s' %chi2_dict[current_res.getResname()][0]),\n",
+    "                                            current_res.select('name %s' %chi2_dict[current_res.getResname()][1]),\n",
+    "                                            current_res.select('name %s' %chi2_dict[current_res.getResname()][2]),\n",
+    "                                            current_res.select('name %s' %chi2_dict[current_res.getResname()][3]))\n",
+    "                        templist.append(chi2[0])\n",
+    "\n",
+    "                    xangles_dict['%s%s' %(mutation[0], mutation[1])]['%s' %counter] = sorted(templist)\n",
+    "\n",
+    "                counter = counter + 1\n",
+    "\n",
+    "            print xangles_dict\n",
+    "    return xangles_dict\n",
+    "\n",
     "#Action!!!\n",
     "def main():\n",
     "    os.chdir('/home/james.lucas/Rotation/DDGBenchmarks_Test/')\n",
@@ -179,57 +271,36 @@
     "    point_mutants = mutant_rms(datadir, input_pdbs)\n",
     "    #neighborhood = neighborhood_rms(neighbors, reference, input_pdbs)\n",
     "    #global_ca = global_ca_rms(input_pdbs)\n",
-    "    #\n",
-    "    #asdf = rmsd(input_pdbs, pyrmsd_calc, point_mutants)\n",
-    "    #\n",
-    "    #for i in asdf:\n",
-    "    #    print i\n",
+    "    \n",
+    "    asdf = rmsd(input_pdbs, pyrmsd_calc, point_mutants)\n",
+    "    \n",
+    "    for i in asdf:\n",
+    "        print i\n",
     "        \n",
     "main()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## X Angle Parser\n",
+    "\n",
+    "Calculates X1 and X2 angles for each point mutation in the Zemu dataset DDG Rosettascript protocol output. The chi_angles function has been added to the RMSD calculator, this separate cell was added so that I could work on this on my Macbook... I can't figure out how to get pyRMSD on my Macbook :/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "@> 4998 atoms and 1 coordinate set(s) were parsed in 0.03s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['61', 'I', 'PIKAA', 'A']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "@> 4998 atoms and 1 coordinate set(s) were parsed in 0.19s.\n",
-      "@> 4998 atoms and 1 coordinate set(s) were parsed in 0.13s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'61I': {'1': [179.054583901716, 73.195873562246803], '3': [179.054583901716, 73.195873562246803], '2': [179.054583901716, 73.195873562246803]}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
-    "from prody import *\n",
-    "#from Bio.PDB import *\n",
+    "import prody\n",
+    "from Bio.PDB import *\n",
     "\n",
     "#From Kyle's Finalize.py\n",
     "def read_mutations_resfile(filenum_dir):\n",
@@ -249,7 +320,7 @@
     "#From Kyle's Finalize.py\n",
     "def find_neighbors(filenum_dir, pdb_path, neighbor_distance = 8.0):\n",
     "    mutations = read_mutations_resfile(filenum_dir)\n",
-    "    parser = PDBParser(PERMISSIVE=1)\n",
+    "    parser = Bio.PDB.PDBParser(PERMISSIVE=1)\n",
     "    open_strct = parser.get_structure('Open', pdb_path)\n",
     "\n",
     "    # There should only be one model in PDB file\n",
@@ -328,41 +399,46 @@
     "    xangles_dict = {}\n",
     "    \n",
     "    for mutation in mutations:\n",
-    "        print mutation\n",
-    "        xangles_dict['%s%s' %(mutation[0], mutation[1])] = {}\n",
-    "        counter = 1\n",
-    "        for input_pdb in input_pdbs:\n",
-    "            p = prody.parsePDB(input_pdb)\n",
-    "            hv = p.getHierView()\n",
-    "            \n",
-    "            current_res = hv[mutation[1], int(mutation[0])]\n",
-    "            templist = []\n",
-    "            \n",
-    "            \n",
-    "            if current_res.getResname() in chi1_dict.keys():\n",
-    "                current_res.select('name %s' %chi1_dict[current_res.getResname()])\n",
-    "                chi1 = calcDihedral(current_res.select('name %s' %chi1_dict[current_res.getResname()][0]),\n",
-    "                                    current_res.select('name %s' %chi1_dict[current_res.getResname()][1]),\n",
-    "                                    current_res.select('name %s' %chi1_dict[current_res.getResname()][2]),\n",
-    "                                    current_res.select('name %s' %chi1_dict[current_res.getResname()][3]))\n",
-    "                templist.append(chi1[0])\n",
-    "                \n",
-    "            if current_res.getResname() in chi2_dict.keys():\n",
-    "                chi2 = calcDihedral(current_res.select('name %s' %chi2_dict[current_res.getResname()][0]),\n",
-    "                                    current_res.select('name %s' %chi2_dict[current_res.getResname()][1]),\n",
-    "                                    current_res.select('name %s' %chi2_dict[current_res.getResname()][2]),\n",
-    "                                    current_res.select('name %s' %chi2_dict[current_res.getResname()][3]))\n",
-    "                templist.append(chi2[0])\n",
-    "                \n",
-    "            xangles_dict['%s%s' %(mutation[0], mutation[1])]['%s' %counter] = templist\n",
-    "            \n",
-    "            counter = counter + 1\n",
-    "            \n",
-    "        print xangles_dict\n",
+    "        if mutation[3] == 'A' or 'G':\n",
+    "            continue\n",
+    "        else:\n",
+    "            xangles_dict['%s%s' %(mutation[0], mutation[1])] = {}\n",
+    "            counter = 1\n",
+    "            for input_pdb in input_pdbs:\n",
+    "                p = prody.parsePDB(input_pdb)\n",
+    "                hv = p.getHierView()\n",
+    "\n",
+    "                current_res = hv[mutation[1], int(mutation[0])]\n",
+    "                templist = []\n",
+    "\n",
+    "                if current_res.getResname() == 'ALA' or 'GLY':\n",
+    "                    continue\n",
+    "\n",
+    "                else:\n",
+    "                    if current_res.getResname() in chi1_dict.keys():\n",
+    "                        current_res.select('name %s' %chi1_dict[current_res.getResname()])\n",
+    "                        chi1 = calcDihedral(current_res.select('name %s' %chi1_dict[current_res.getResname()][0]),\n",
+    "                                            current_res.select('name %s' %chi1_dict[current_res.getResname()][1]),\n",
+    "                                            current_res.select('name %s' %chi1_dict[current_res.getResname()][2]),\n",
+    "                                            current_res.select('name %s' %chi1_dict[current_res.getResname()][3]))\n",
+    "                        templist.append(chi1[0])\n",
+    "\n",
+    "                    if current_res.getResname() in chi2_dict.keys():\n",
+    "                        chi2 = calcDihedral(current_res.select('name %s' %chi2_dict[current_res.getResname()][0]),\n",
+    "                                            current_res.select('name %s' %chi2_dict[current_res.getResname()][1]),\n",
+    "                                            current_res.select('name %s' %chi2_dict[current_res.getResname()][2]),\n",
+    "                                            current_res.select('name %s' %chi2_dict[current_res.getResname()][3]))\n",
+    "                        templist.append(chi2[0])\n",
+    "\n",
+    "                    xangles_dict['%s%s' %(mutation[0], mutation[1])]['%s' %counter] = sorted(templist)\n",
+    "\n",
+    "                counter = counter + 1\n",
+    "\n",
+    "            print xangles_dict\n",
     "\n",
     "def main():\n",
-    "    #os.chdir('/home/james.lucas/Rotation/DDGBenchmarks_Test/')\n",
-    "    os.chdir('/Users/jameslucas/Kortemme_Rotation')\n",
+    "    os.chdir('/home/james.lucas/Rotation/DDGBenchmarks_Test/')\n",
+    "    #os.chdir('/Users/jameslucas/Kortemme_Rotation')\n",
     "    #Define things\n",
     "    datadir = 'TestJobs/data/59648/'\n",
     "    reference = 'TestJobs/data/59648/1TM1_EI.pdb'\n",
@@ -379,6 +455,170 @@
     "    chi_angles(datadir, input_pdbs)\n",
     "    \n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mutant PBD Scraper\n",
+    "This script will take the sequence for each PDB in a subdirectory within some_ZeMu_dataset/data/ and modify the sequence based on the associated resfile. The script will then use prody_blast to find and download relevant structures from the PDB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import prody\n",
+    "import re\n",
+    "import requests\n",
+    "import klab.bio.rcsb as ASDF\n",
+    "\n",
+    "#From Kyle's Finalize.py\n",
+    "def read_mutations_resfile(filenum_dir):\n",
+    "    resfile = os.path.join(filenum_dir, 'mutations_repack.resfile')\n",
+    "    mutations = []\n",
+    "    with open(resfile, 'r') as f:\n",
+    "        post_start = False\n",
+    "        for line in f:\n",
+    "            if post_start:\n",
+    "                line = line.strip()\n",
+    "                pdb_resnum, chain, pikaa, mut_res = line.split()\n",
+    "                mutations.append( [pdb_resnum, chain, pikaa, mut_res] )\n",
+    "            elif line.startswith('start'):\n",
+    "                post_start = True\n",
+    "    return mutations\n",
+    "\n",
+    "def generate_mut_seq(pdbdir, hv):\n",
+    "    blast_dict = {}\n",
+    "    mutation_dict = {}\n",
+    "        \n",
+    "    mutations = read_mutations_resfile(pdbdir)\n",
+    "        \n",
+    "    for mutation in mutations:\n",
+    "        mutation_dict[mutation[0] + mutation[1]] = mutation[3]\n",
+    "    \n",
+    "    #Dictionary: 3- to 1-letter code\n",
+    "    res_dict = {\n",
+    "        'ALA':'A',\n",
+    "        'CYS':'C',\n",
+    "        'ASP':'D',\n",
+    "        'GLU':'E',\n",
+    "        'PHE':'F',\n",
+    "        'GLY':'G',\n",
+    "        'HIS':'H',\n",
+    "        'ILE':'I',\n",
+    "        'LYS':'K',\n",
+    "        'LEU':'L',\n",
+    "        'MET':'M',\n",
+    "        'ASN':'N',\n",
+    "        'PRO':'P',\n",
+    "        'GLN':'Q',\n",
+    "        'ARG':'R',\n",
+    "        'SER':'S',\n",
+    "        'THR':'T',\n",
+    "        'VAL':'V',\n",
+    "        'TRP':'W',\n",
+    "        'TYR':'Y'\n",
+    "    }\n",
+    "    \n",
+    "    for chain in hv:\n",
+    "        chain_string = ''\n",
+    "        for residue in chain:\n",
+    "            current_res =  str(residue.getResnum()) + str(residue.getChid())\n",
+    "            if current_res not in mutation_dict.keys():\n",
+    "                chain_string = chain_string + res_dict[residue.getResname()]\n",
+    "            else:\n",
+    "                chain_string = chain_string + mutation_dict[str(residue.getResnum()) + str(residue.getChid())]\n",
+    "        blast_dict[chain.getChid()] = chain_string\n",
+    "    \n",
+    "    for i in blast_dict:\n",
+    "        print blast_dict[i]\n",
+    "        \n",
+    "    return blast_dict\n",
+    "\n",
+    "def get_PDBs(pdbdir):\n",
+    "    skip_blast = False\n",
+    "    \n",
+    "    print pdbdir\n",
+    "    \n",
+    "    for pdb_file in os.listdir(pdbdir):\n",
+    "        if pdb_file.endswith('.pdb'):\n",
+    "            output_dir = os.path.join('/kortemmelab/home/james.lucas/Mutant_PDBs', pdb_file[:-4])\n",
+    "            try:\n",
+    "                os.makedirs(output_dir)        \n",
+    "            except:\n",
+    "                print 'File directory %s already exists!!!' % pdb_file[:-4]\n",
+    "                #skip_blast = True\n",
+    "            \n",
+    "            pdb_chains = re.split(r'_', pdb_file)[1][:-4]\n",
+    "            pdb_id = re.split(r'_', pdb_file)[0]\n",
+    "            hv = prody.parsePDB(os.path.join(pdbdir, pdb_file)).getHierView()\n",
+    "            \n",
+    "    if skip_blast == True:\n",
+    "        skip_blast = False\n",
+    "        \n",
+    "    else:\n",
+    "        blast_dict = generate_mut_seq(pdbdir, hv)\n",
+    "        hit_list = []\n",
+    "        for sequence in blast_dict:\n",
+    "            set_dict = {}\n",
+    "            temp_set = set()\n",
+    "            blast_me = prody.blastPDB(blast_dict[sequence])\n",
+    "            hits_dict = blast_me.getHits(percent_identity=95)\n",
+    "            for hit in hits_dict:\n",
+    "                temp_set.add(hit)\n",
+    "            \n",
+    "            hit_list = hit_list.append(temp_set)\n",
+    "            \n",
+    "        common_set = hit_list[0]\n",
+    "        \n",
+    "        for entry in hit_list[1:]:\n",
+    "            common_set = common_set.intersection(entry)\n",
+    "        \n",
+    "        print common_set\n",
+    "        \n",
+    "#         for hit in hits:\n",
+    "#             ASDF.download_pdb(hit, output_dir)\n",
+    "            \n",
+    "def main():\n",
+    "    os.chdir('/kortemmelab/home/james.lucas/160322-james-backrub-rscript-full/data/')\n",
+    "    cwd = os.getcwd()\n",
+    "    print cwd\n",
+    "    for pdbdir in os.listdir(cwd):\n",
+    "        if os.path.isdir(pdbdir):\n",
+    "            get_PDBs(pdbdir)\n",
+    "        break\n",
+    "        \n",
+    "main()\n",
+    "\n",
+    "\n",
+    "# for subdir in directory(data):\n",
+    "#   for files in subdir:\n",
+    "#   mutlist = []\n",
+    "#   if file == 'mutations.resfile':\n",
+    "#       mut_type = mutant residue type\n",
+    "#       mut_pos = mutant residue position\n",
+    "#       mutlist.append([mut_type, mut_pos])\n",
+    "#   if file ends in '.pdb':\n",
+    "#       structure = parser.get_structure('TEST', data + subdir + files)\n",
+    "#       pdbcode = take the first four letters of filename.pdb\n",
+    "\n",
+    "#   #Find related structures using PyPDB module make_query()\n",
+    "#   MSQuery = pypdb.make_query(pdbcode, querytype = 'ModifiedStructuresQuery')\n",
+    "\n",
+    "#   #Obtain PDB sequence, introduce mutations, and search against PDB\n",
+    "#   ppb=CaPPBuilder()\n",
+    "#   for pp in ppb.build_peptides(structure): \n",
+    "#       print pp.get_sequence()\n",
+    "#   seq = polypeptide.get_sequence()\n",
+    "#   search_PDB_for_sequence(seq)"
    ]
   },
   {
